deployments/pong/pong.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pong
  labels:
    app: pong
    service: pong
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: pong
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong
  labels:
    app: pong
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong
      version: v1
  template:
    metadata:
      labels:
        app: pong
        version: v1
    spec:
      serviceAccountName: pong
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: pong
          image: ewohltman/pong:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8080
