deployments/pong/service-pong.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pong
  labels:
    app: pong
    service: pong
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: pong
