deployments/pong/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pong
  name: pong
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: pong
  sessionAffinity: None
  type: NodePort
